Sforce8 Project Data/src/objects/GuestRoomStock__c.object
<CustomObject>
    <description>部屋在庫名:  日付＋部屋タイプで組み合わせる-&gt;triggerで自動設定を行う</description>
    <fields>
        <fullName>QtyOfStock__c</fullName>
        <label>在庫数</label>
        <precision>15</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomTypeRef__c</fullName>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>部屋在庫</relationshipLabel>
        <relationshipName>RoomType</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StockDate__c</fullName>
        <description>在庫管理日</description>
        <label>在庫日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>部屋在庫管理</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RoomTypeRef__c</columns>
        <columns>QtyOfStock__c</columns>
        <columns>StockDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>部屋在庫名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>